tests/fail/enum_with_no_variants.stderr
error: #[derive(OpenapiType)] does not support enums with no variants
 --> $DIR/enum_with_no_variants.rs:4:10
  |
4 | enum Foo {}
  |          ^^
